2001-08-12  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile.PL (constants): Added replacing the INSTALLMAN*DIR
	definitions with $(PREFIX) instead of the configured_prefix value
	to make up for old versions of ExtUtils/MM_Unix.pm.

2001-08-09  Elliot Glaysher  <eglayshe@umich.edu>

	* Netcomics/Factory.pm (new): Have you ever noticed how changing one
	line of code can affect the whole program? FINALLY fixed import of
	comics with multiple images.

2001-08-08  Elliot Glaysher  <eglayshe@umich.edu>

	* Netcomics/Factory.pm (new): Fixed implimentation of import that I did
	two days ago.
	* Netcomics/Factory.pm (new): (2nd commit). REALLY fixed importing on
	comics with multiple 

2001-08-06  Elliot Glaysher  <eglayshe@umich.edu>

	* (Sorry about the prolonged abscence)
	* Netcomics/Factory.pm (new): now imports all the 0.13.2 RLIs

2001-07-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* INSTALL: Updated first section to explain in depth about
	changing install paths.

2001-07-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics.spec (%install): Added compression of some doc files.
	(%changelog): Reformatted so that it would use RCS keyword
	replacement to automatically manage the changelog.
	* Makefile.PL (macro): Changed PKGVERSION to be 1cvs.

2001-07-19  Elliot Glaysher  <eglayshe@umich.edu>

	* debian/netcomics.manpages: Fixed manpage installation, and brought
	packages closer to debian policy (lintian now only reports 2 errors
	with the packages!)

2001-07-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/netcomics.pod: Fixed missing words in the paragraph about
	timezones (the one labeled Important).

2001-07-18  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* NEWS: Updated for 0.13.2
	* netcomics.spec (%post data): Fixed bug in script.

2001-07-17  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics.spec (%post data): updated oldmodules list
	(Version): Updated to 0.13.2.